# autogen-rs

./: Cargo.toml  EXPLANATION.md  PAPER.md  README.md
autogen-client/: Cargo.toml
autogen-core/: Cargo.toml
autogen-core/src/: config.rs  main.rs
autogen-core/src/openai/: agent.rs  error.rs
examples/: chess.rs
sophon-backends/: Cargo.toml
sophon-backends/src/: lib.rs
sophon-backends/src/openai/: config.rs  error.rs  mod.rs
sophon-backends/src/user/: active.rs  error.rs  mod.rs  passive.rs
sophon-client/: Cargo.toml  temp.json
sophon-client/src/: lib.rs  main.rs
sophon-core/: Cargo.toml  config.toml
sophon-core/src/: agent.rs  config.rs  entity.rs  lib.rs  message.rs
sophon-core/src/agent/: entity.rs  message.rs  mod.rs
sophon-core/src/openai/: agent.rs  config.rs  mod.rs
