[package]
name = "sophon-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "AI agent composition framework"
keywords.workspace = true
license.workspace = true
readme = "../README.md"
exclude = ["Cargo.lock"]

[dependencies]
sophon-core = { workspace = true }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
