[package]
name = "sophon-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Backend agnostic AI and User agents"
keywords.workspace = true
license.workspace = true
readme = "../README.md"
exclude = ["Cargo.lock"]

[dependencies]
chatgpt_rs.workspace = true 
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true 
tracing.workspace = true 
